# ChangeLog for net-mail/qmail-scanner
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/qmail-scanner/ChangeLog,v 1.2 2002/08/15 23:22:29 raker Exp $

*qmail-scanner-1.13 (15 Aug 2002)

  15 Aug 2002; Nick Hadaway <raker@gentoo.org>
  qmail-scanner-1.13.ebuild, files/digest-qmail-scanner-1.13 :
  Version bump.

*qmail-scanner-1.12-r1 (12 Jun 2002)

  12 Jun 2002; Grant Goodyear <g2boojum@gentoo.org>
  qmail-scanner-1.12-r1.ebuild, files/digest-qmail-scanner-1.12-r1 :
  Unmasked because upstream fixed some bugs.