@@ -1,1 +1,0 @@
-MD5 a0e60f61d363b0675f443fa3fcdcd9ec qmail-scanner-1.12.tgz 115488
