@@ -1,12 +1,12 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/qmail-scanner/qmail-scanner-1.12-r1.ebuild,v 1.4 2002/09/23 21:55:51 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/qmail-scanner/qmail-scanner-1.14.ebuild,v 1.1 2002/10/07 13:27:17 raker Exp $
 
 S=${WORKDIR}/${P}
+
 DESCRIPTION="E-Mail virus scanner for qmail."
 HOMEPAGE="http://qmail-scanner.sourceforge.net/"
 SRC_URI="mirror://sourceforge/qmail-scanner/${P}.tgz"
-
 
 DEPEND=">=sys-devel/perl-5.6.1-r1
         >=dev-perl/Time-HiRes-01.20
@@ -15,7 +15,8 @@ DEPEND=">=sys-devel/perl-5.6.1-r1
         >=net-mail/maildrop-1.3.9
         >=dev-perl/DB_File-1.803
         >=net-mail/qmail-1.03-r8
-		>=app-arch/unzip-5.42-r1"
+	>=app-arch/unzip-5.42-r1"
+RDEPEND="${DEPEND}"
 
 SLOT="0"
 LICENSE="GPL-2"
