@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/qmail-scanner
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/qmail-scanner/ChangeLog,v 1.2 2002/08/15 23:22:29 raker Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/qmail-scanner/ChangeLog,v 1.3 2002/10/07 13:27:17 raker Exp $
+
+*qmail-scanner-1.14 (07 Oct 2002)
+
+  17 Oct 2002; Nick Hadaway <raker@gentoo.org>
+  qmail-scanner-1.14.ebuild, files/digest-qmail-scanner-1.14 :
+  Version bump.  Fixes some bugs with alert reporting and for usage with
+  SpamAssassin.
 
 *qmail-scanner-1.13 (15 Aug 2002)
 
